--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-zoom-pan-pinch": "^2.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
+    "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "17.0.14",
     "@types/react": "17.0.39",
+    "babel-plugin-emotion": "^11.0.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
