--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lineto": "^3.3.0",
+    "react-xarrows": "^2.0.2",
     "react-zoom-pan-pinch": "^2.1.3"
   },
   "devDependencies": {
