--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@types/ramda": "^0.27.64",
     "next": "12.0.10",
+    "ramda": "^0.28.0",
+    "ramda-decimal": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-lineto": "^3.3.0",
     "react-xarrows": "^2.0.2",
-    "react-zoom-pan-pinch": "^2.1.3"
+    "react-zoom-pan-pinch": "^2.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
